<resources>

    <!-- App & Activities Strings -->
    <string name="app_name">My News</string>
    <string name="search_title">Search Articles</string>
    <string name="notifications_title">Notifications</string>

    <!-- API KEY -->
    <string name="api_key">7423ec0d6b104a77b3c1cbcf877e8fb9</string>

    <!-- API Query values -->
    <string name="newest_sort_order">newest</string>

    <!-- Toolbar Strings -->
    <string name="toolbar_string_search">Search</string>
    <string name="toolbar_string_notifications">Notifications</string>
    <string name="toolbar_string_help">Help</string>
    <string name="toolbar_string_about">About</string>

    <!-- NavigationDrawer Strings -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_first_category">News</string>
    <string name="navigation_drawer_second_category">Options</string>

    <!-- Tab names Strings -->
    <string name="tab_name_1">Top Stories</string>
    <string name="tab_name_2">Most Popular</string>
    <string name="tab_name_3">Business</string>

    <!-- AlertDialog buttons Strings -->
    <string name="alertdialog_button_neutral">OK</string>

    <!-- AlertDialog content Strings -->
    <string name="alertdialog_content_help_string">Searches must be initiated with at least 1 Word AND 1 category</string>
    <string name="alertdialog_content_about_string">My News 2018 - All articles come from the <b>New York Times APIs</b>, and belong to their respective owners. API used: <i>TopStories API</i>, <i>MostPopular API</i> and <i>Search API</i></string>

    <string name="alertdialog_title_error_search">Error</string>

    <string name="alertdialog_content_empty_checkboxes_search">At least <b>ONE</b> category must be checked before starting a search</string>
    <string name="alertdialog_content_empty_query_search">At least <b>ONE</b> word must be inserted before starting a search</string>
    <string name="alertdialog_content_empty_results_search">No search results found, try again</string>
    <string name="alertdialog_content_empty_results_notifications_search">No results were found for this current Search, but it will still enable notifications feature.</string>

    <!-- SearchActivity/Notifications Strings -->
    <string name="search_box1">Arts</string>
    <string name="search_box2">Business</string>
    <string name="search_box3">Entrepreneurs</string>
    <string name="search_box4">Politics</string>
    <string name="search_box5">Sports</string>
    <string name="search_box6">Travel</string>
    <string name="button_search">SEARCH</string>
    <string name="search_hint">Search query term</string>
    <string name="switch_text">Enable notifications (once per day)</string>
    <string name="search_label_begin_date">Begin date</string>
    <string name="search_label_end_date">End date</string>

    <!-- View layout Strings -->
    <string name="category_text"><b>Category</b></string>
    <string name="date_text">Date</string>
    <string name="content_text">Content</string>








</resources>
