<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/navigation_drawer_first_category">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/activity_main_drawer_tab_1"
                    android:icon="@drawable/ic_tab_white_24dp"
                    android:title="@string/tab_name_1" />
                <item
                    android:id="@+id/activity_main_drawer_tab_2"
                    android:icon="@drawable/ic_tab_white_24dp"
                    android:title="@string/tab_name_2" />
                <item
                    android:id="@+id/activity_main_drawer_tab_3"
                    android:icon="@drawable/ic_tab_white_24dp"
                    android:title="@string/tab_name_3" />
            </group>
        </menu>
    </item>

    <item android:title="@string/navigation_drawer_second_category">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/activity_main_drawer_search"
                    android:icon="@drawable/ic_search_white_24dp"
                    android:title="@string/toolbar_string_search" />
                <item
                    android:id="@+id/activity_main_drawer_help"
                    android:icon="@drawable/ic_help_white_24dp"
                    android:title="@string/toolbar_string_help" />
                <item
                    android:id="@+id/activity_main_drawer_about"
                    android:icon="@drawable/ic_copyright_white_24dp"
                    android:title="@string/toolbar_string_about" />
            </group>
        </menu>
    </item>

</menu>