<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.raspberyl.mynews.controller.SearchActivity"
    android:orientation="vertical">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar_searchactivity">
    </include>

    <EditText
        android:id="@+id/search_editText"
        android:hint="@string/search_hint"
        android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:maxLength="40"
        android:maxLines="1"
        android:singleLine="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:theme="@style/EditTextSearch.Theme" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1.5"
            >

            <TextView
                android:id="@+id/begin_date_textview_label"
                android:paddingStart="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_label_begin_date"
                />

            <EditText
                android:id="@+id/begin_date_edittext"
                android:layout_width="170dp"
                android:layout_height="42dp"
                android:drawableRight="@drawable/ic_arrow_drop_down_black_24dp"
                android:editable="false"
                android:focusable="false"
                android:theme="@style/EditTextDate.Theme"
             />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:orientation="vertical"
            android:layout_weight="1.5"

            >

            <TextView
                android:id="@+id/end_date_textview_label"
                android:paddingStart="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_label_end_date"
             />

            <EditText
                android:id="@+id/end_date_edittext"
                android:layout_width="170dp"
                android:layout_height="42dp"
                android:drawableRight="@drawable/ic_arrow_drop_down_black_24dp"
                android:editable="false"
                android:focusable="false"
                android:theme="@style/EditTextDate.Theme"
              />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:paddingStart="8dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.5">

            <CheckBox
                android:id="@+id/search_box1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:text="@string/search_box1"
                android:theme="@style/CheckBox.Theme" />

            <CheckBox
                android:id="@+id/search_box2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:text="@string/search_box2"
                android:theme="@style/CheckBox.Theme" />

            <CheckBox
                android:id="@+id/search_box3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:text="@string/search_box3"
                android:theme="@style/CheckBox.Theme" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.5">

            <CheckBox
                android:id="@+id/search_box4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:text="@string/search_box4"
                android:theme="@style/CheckBox.Theme" />

            <CheckBox
                android:id="@+id/search_box5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:text="@string/search_box5"
                android:theme="@style/CheckBox.Theme" />

            <CheckBox
                android:id="@+id/search_box6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:text="@string/search_box6"
                android:theme="@style/CheckBox.Theme" />


        </LinearLayout>


    </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingTop="8dp">

    <View
        android:id="@+id/horizontal_divider_search"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:background="?android:attr/listDivider"
        android:color="@color/myNewsBlack"/>

</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:orientation="horizontal"
            android:paddingTop="8dp">


            <Button
                android:id="@+id/button_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_search"
                android:theme="@style/SearchButton.Theme"
                android:gravity="center"
                />

        </LinearLayout>


        <Switch
            android:id="@+id/notification_switch"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/switch_text"
            android:theme="@style/Switch.Theme" />
    </LinearLayout>




</LinearLayout>
